--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -7,11 +7,8 @@ body {
   line-height: 1.6;
 }
 
-body {
-  padding-top: 60px; /* This should match the height of your navbar */
-}
 .container {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 20px;
   position: relative;
